Cesar coder added

--- a/danik/index.html
+++ b/danik/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Small JavaScript projects</title>
 </head>
 <body>
+
+<a href="cesar-coder.html">Cesar coder</a>
 
 </body>
 </html>
